# googletools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  install_tools.sh  pyproject.toml
.github/workflows/: ci.yml  main.yml
googletools/: credentials.py  drive.py  settings.py  sheets.py
tests/: data.py  test_drive.py  test_sheets.py
