[tool.poetry]
name = "googletools"
version = "0.3.0"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
google-api-core = "^2.5.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
google-api-python-client = "^2.36.0"
timtools = { git = "https://github.com/tim83/timtools"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
black = "^22.1.0"
isort = "^5.10.1"
bandit = "^1.7.2"
safety = "^1.10.3"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
