[tool.poetry]
name = "googletools"
version = "0.4.0"
description = ""
authors = ["Tim Mees <tim.mees83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.3.0"
google-api-core = ">=2.5.0"
google-auth-httplib2 = ">=0.1.0"
google-auth-oauthlib = ">=0.4.6"
google-api-python-client = ">=2.36.0"
timtools = { git = "https://github.com/tim83/timtools" }

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
pre-commit = ">=2.15.0"
pytest = ">=7.1.1"
darglint = ">=1.8.1"
python-semantic-release = ">=7.25.0"
pylint = ">=2.12.2"
ruff = ">=0.0.256"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.ruff]
line-length = 88
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Flake8-bugbear
    "B"
]